[package]
name = "pisearch"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"
byteorder = "1.4.3"
regex = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
num-format = "0.4"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars","tera"]
